OpenVDB Version History
=======================

Version 9.0.0 - October 29, 2021

    New features:
    - NanoVDB, which for the first time offers GPU support for static sparse
      volumes in OpenVDB.

    Improvements:
    - Added tools::countActiveLeafVoxels(), tools::countInactiveVoxels(),
      tools::countInactiveLeafVoxels() and tools::activeTiles() to perform
      multi-threaded counting. The Tree methods now use these implementations.
    - Moved from the deprecated TBB task scheduler to TBB arenas. Various
      methods now respect the TBB arena state they were invoked from.
    - Introduced a new thread/Threading.h header to consolidate calls to
      third-party threading methods.
    - Minor performance improvements to dilation calls in fast sweeping
      algorithms.
    - Added hsvtogrb() and rgbtohsv() AX helper functions for converting
      hue, saturation and value inputs to RGB values and vice-versa.
    - PointDataGrid conversion can now be performed using 32-bit float arrays.
    - Improved support for size_t grid types on systems where size_t is a
      unique type.
      [Contributed by Brecht Van Lommel]
    - Add support for dilation in one direction and extending a field in one
      direction in fast sweeping algorithms.
    - Added PNG support to vdb_render which can be enabled with during CMake
      with -DUSE_PNG=ON.
    - Explicit template instantiation has been enabled by default for most of
      the tools. This pre-compiles template instantiations into the core library
      to reduce the time spent compiling code in downstream libraries or
      applications.
    - Added a python binding for OpenVDB AX which allows you to invoke accelerated
      AX code from the python module.

    Bug Fixes:
    - Fixed a bug where ax::run() would crash if it could not parse a single
      statement.

    ABI changes:
    - Added transient data to the RootNode, InternalNode, and LeafNode.

    API changes: